# Programmierpraktikum_backtracking

./: CMakeLists.txt  README.md
examples/: main.cpp
include/: ASAT.h  CSAT.h  SAT.h  backtracking.h  slimSAT.h
src/: ASAT.cpp  CSAT.cpp  SAT.cpp  backtracking.cpp  main.cpp  slimSAT.cpp
